[package]
name = "telemetry-fusion-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI + utils
clap = { version = "4", features = ["derive"] }
rand = "0.8"

# Time helpers (std is enough; keeping deps lean)
